--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="choose_your_type">사용자 유형 선택</string>
     <string name="add_picture">그림 추가</string>
     <string name="register_picture">그림 등록</string>
+    <string name="direct_message">Contact</string>
+
     <string name="message_copied">메시지가 복사되었습니다.</string>
     <string name="modify_information">정보 수정</string>
 
