--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -31,7 +31,8 @@
     <string name="repeat_your_pw">비밀번호를 다시 입력해주세요.</string>
     <string name="not_valid_input">입력한 내용이 유효하지 않아요.</string>
     <string name="failed_to_sign_in">로그인에 실패했어요.</string>
-    <string name="start_chat_with_others">새로운 작가들을 찾아 대화를 시작해보세요.</string>
+    <string name="chat_is_empty">새로운 작가들을 찾아 대화를 시작해보세요.</string>
+    <string name="post_is_empty">다른 작가들이 아직 그림을 공유하지 않았네요.</string>
     <string name="failed_to_register">회원가입에 실패했어요.</string>
     <string name="failed_to_get_permission">권한이 거부되었어요.</string>
     <string name="message_copied">메시지가 복사되었습니다.</string>
@@ -40,6 +41,7 @@
     <string name="choose_your_usertype">사용자 유형을 선택해주세요.</string>
     <string name="modify_information">정보 수정</string>
     <string name="add_your_picture">소개하고 싶은 그림을 1장 이상 추가해주세요.</string>
+    <string name="error_get_message">메시지를 가져오는 도중 오류가 발생했어요.</string>
 
     <string name="example_phone_number">010–0000–0000</string>
     <string name="example_verification_code">1234</string>
