--- a/frontend/app/src/main/res/values/strings.xml
+++ b/frontend/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="failed_to_get_permission">권한이 거부되었어요.</string>
     <string name="message_copied">메시지가 복사되었습니다.</string>
     <string name="enter_your_nickname">별명을 입력하세요.</string>
+    <string name="enter_your_introduce">자신을 잘 나타내는 소개 한 줄을 입력하세요.</string>
     <string name="enter_your_instagram_id">인스타그램 계정이 있으시다면 입력하세요.</string>
     <string name="choose_your_usertype">사용자 유형을 선택해주세요.</string>
     <string name="modify_information">정보 수정</string>
@@ -48,6 +49,7 @@
     <string name="example_email">example@example.com</string>
     <string name="example_nickname">홍길동</string>
     <string name="example_instagram_id">hong_gil_dong</string>
+    <string name="example_introduce">안녕하세요. 홍길동입니다.</string>
     <string name="example_pw">******</string>
 
     <string name="necessary">필수</string>
@@ -56,6 +58,7 @@
     <string name="option">선택</string>
     <string name="instagram_account">인스타그램 계정</string>
     <string name="nickname">별명</string>
+    <string name="introduce">별명</string>
     <string name="usertype">사용자 유형</string>
     <string name="verification_code">인증 번호</string>
     <string name="email">이메일</string>
